--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>{{ page.title }}</title>
+<link rel="stylesheet" type="text/css" href="/media/css/style.css">
 <link rel="stylesheet" type="text/css" href="/media/css/syntax.css">
 </head>
 <body>
