--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@
     <title>{{ page.title }}</title>
     <link href='http://fonts.googleapis.com/css?family=Lekton:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/media/css/home.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
   </head>
 
   <body>
