--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -3,7 +3,7 @@
 <head>
 <title>{{ page.title }}</title>
 <link rel="stylesheet" type="text/css" href="/media/css/reset.css">
-<link rel="stylesheet" type="text/css" href="/media/css/archive.css">
+<link rel="stylesheet" type="text/css" href="/media/css/writing.css">
 </head>
 <body>
   <div id="container">
