--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html
   <head>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/media/css/post.css">
+    <link rel="stylesheet" type="text/css" href="/media/css/writing.css">
     <link rel="stylesheet" type="text/css" href="/media/css/syntax.css">
   </head>
 
