--- a/media/css/home.css
+++ b/media/css/home.css
@@ -6,6 +6,9 @@ body {
   min-height:100%;
 }
 
+a { text-decoration: none; color: #339 }
+a:hover { text-decoration: underline; color: #33f; }
+
 #container {
   height: 100%;
   background: url('/media/img/bigheaded-astronaut.png') no-repeat right top;
