Rename media/ to static/ and update links

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>{{ page.title }}</title>
-<link rel="stylesheet" type="text/css" href="/media/css/reset.css">
-<link rel="stylesheet" type="text/css" href="/media/css/writing.css">
+<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+<link rel="stylesheet" type="text/css" href="/static/css/writing.css">
 </head>
 <body>
   <div id="container">
