--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>{{ page.title }}</title>
-<link rel="stylesheet" type="text/css" href="/media/css/style.css">
-<link rel="stylesheet" type="text/css" href="/media/css/syntax.css">
+<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+<link rel="stylesheet" type="text/css" href="/static/css/syntax.css">
 </head>
 <body>
 <h1>{{ page.title }}</h1>
