--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{ page.title }}</title>
     <link href='http://fonts.googleapis.com/css?family=Lekton:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/media/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/home.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
   </head>
 
