--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ page.title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Lekton:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/static/css/home.css">
-    <link rel="icon" href="favicon.png" type="image/x-icon">
-  </head>
-
-  <body>
-    <div id="container">
-      <div id="content">
-      {{ content }}
-      </div>
+<html lang="en">
+<head>
+<title>{{ page.title }}</title>
+<link rel="icon" href="favicon.png" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="/static/css/base.css">
+</head>
+<body>
+<div class="container">
+  <div class="row" id="stripe">
+    <div class="span7">
+      <h1><a href="/">garrett.io</a></h1>
     </div>
-  </body>
+    <div class="span5">
+      <ul id="nav">
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/blog.html">Blog</a></li>
+        <li><a href="/projects.html">Projects</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="row" id="content">
+    {{ content }}
+  </div>
+</div>
+</body>
 </html>
