Rework file layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="row" id="stripe">
     <div class="span7">
-      <h1><a href="/">garrett.io</a></h1>
+      <h1><a href="/">Garrett.io</a></h1>
     </div>
     <div class="span5">
       <ul id="nav">
