--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,16 +1,58 @@
+body {
+    /* Georgia-based font stack from http://www.sitepoint.com/eight-definitive-font-stacks/ */
+    font:16px/1.5 Constantia, "Lucida Bright", "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+    color:#333;
+}
+
+body a {
+    text-decoration:none;
+    color:#1E4F69;
+    border-bottom:1px solid #A3BECC;
+}
+
+body a:hover {
+    text-decoration:none;
+    color:#256282;
+    border-bottom:1px solid #B7D6E6;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family:'Lucida Grande', Helvetic, Arial, sans-serif;
+}
+
 div#stripe {
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid #ddd;
+}
+
+div#stripe h1 a {
+    color:#333;
+    text-decoration:none;
+    border-bottom:none;
+}
+
+div#stripe h1 a:hover {
+    color:#555;
 }
 
 ul#nav {
+  font:16px/1.5 'Lucida Grande', Helvetica, Arial, sans-serif;
   list-style-type:none;
 }
 
-ul#nav li {
+#nav li {
   float:left;
 }
 
-ul#nav li a {
+#nav a {
   display:block;
-  width:60px;
+  width:65px;
+  border-bottom:none;
 }
+
+#nav a:hover {
+  color:
+
+ul, ol {
+  margin:0;
+}
+
