--- a/static/css/writing.css
+++ b/static/css/writing.css
@@ -9,9 +9,8 @@ body {
 }
 
 #container {
-  width:70%;
-  min-width:700px;
-  padding: 24px;
+  width:600px;
+  padding: 24px 48px;
   margin: 0 auto;
   margin-top: 21px;
   margin-bottom: 42px;
