Add link for Atom feed to homepage and blog archive

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,6 +4,7 @@
 <title>{{ page.title }}</title>
 <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
 <link rel="stylesheet" type="text/css" href="/static/css/writing.css">
+<link rel="alternate" type="application/atom+xml" href="atom.xml" title="Garrett Robinson's Blog">
 </head>
 <body>
   <div id="container">
