--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="favicon.png" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+<link rel="alternate" type="application/atom+xml" href="atom.xml" title="Garrett Robinson's Blog">
 </head>
 <body>
 <div class="container">
