--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <title>{{ page.title }}</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Garrett Robinson's Blog">
