--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html
+<html>
   <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/writing.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/syntax.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
   </head>
-
   <body>
-    <div id="container">
-    <h1>{{ page.title }}</h1>
+    <h2>{{ page.title }}</h2>
     {{ content }}
     </div>
   </body>
