--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
+	<meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
   </head>
